--- a/src/app/components/styles.css
+++ b/src/app/components/styles.css
@@ -1,3 +1,4 @@
+/* General styles */
 .toolbar {
   border-radius: 10px;
   background: #ffffff;
@@ -5,19 +6,46 @@
   margin: 5% 0;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   padding: 15px 10px;
-  row-gap: 15px;
+  row-gap: 20px;
 }
+
 .toolbar-grp > * {
   margin-right: 10px;
   cursor: pointer;
 }
+
 .toolbar-grp {
   margin: 0 10px;
+  display: flex;
+  flex-wrap: wrap;
 }
+
 select {
   height: 30px;
-  border: none;
   width: 6.9rem;
+}
+
+/* Light mode */
+body.light-mode .toolbar {
+  background: #ffffff;
+  box-shadow: -8px 8px 13px #ededed, 8px -8px 13px #ffffff;
+}
+
+body.light-mode select {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+/* Dark mode */
+body.dark-mode .toolbar {
+  background: #2c2c2c;
+  box-shadow: -8px 8px 13px #1e1e1e, 8px -8px 13px #3c3c3c;
+}
+
+body.dark-mode select {
+  background-color: #3c3c3c;
+  color: #ffffff;
 }
